# distft

./: .bazelrc  .gitignore  Dockerfile  MODULE.bazel  README.md  WORKSPACE  docker-startup.sh  founder-startup.sh  founder.Dockerfile  spdlog.BUILD  transient.Dockerfile
cmake/: grpc.cmake  spdlog.cmake
include/: client.h  file.h
src/client/: BUILD  CMakeLists.txt  client.h  cmd.cpp  daemon.cpp  file.cpp  file.h  founder.cpp  interactive.cpp  main.cpp  transient.cpp
src/dht/: BUILD  CMakeLists.txt  chunk.h  common.cmake  dht.proto  key.cpp  key.h  main.cpp  peer.h  router.cpp  router.h  rpc.cpp  rpc.h  session.cpp  session.h  test_client.cpp
src/dht/tests/: CMakeLists.txt  main.cpp  router.cpp  session.cpp  tests.h
src/network/: CMakeLists.txt  basic.proto  basic_client.cpp  basic_server.cpp  common.cmake
src/utils/: BUILD  CMakeLists.txt  utils.cpp  utils.h
tests/: BUILD  CMakeLists.txt  file.cpp  main.cpp  session.cpp  tests.h  utils.cpp
